Atualizando sytle, media-query e o index

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Material Icons do Google -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
 
     <!-- Configurações para dispositivos móveis (celulares)-->
     <link rel="stylesheet" href="styles/style.css">
@@ -17,7 +17,9 @@
 </head>
 <body>
     <form action="#" autocomplete="on" method="post">
-        
+        <div id="img-movel1">
+
+        </div>
 
         <div id="camps">
             <h1>Login</h1>
@@ -53,11 +55,22 @@
                 id="submit"
                 type="submit" 
                 value="Entrar">
-            <input 
+            <button 
                 class="posform" 
                 id="forgot" 
                 type="button" 
                 value="Esqueci a senha">
+
+                Esqueci a senha 
+                <span class="material-symbols-outlined">
+                    mail
+                </span>
+
+            </button>
+        </div>
+
+        <div id="img-movel2">
+
         </div>
     </form>
 </body>
