--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div id="img"></div>
 
 
-            <div class="form">
+            <div id="form">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
 
