ajustando os campos do formulário

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 
                 <form action="action.php" method="post" autocomplete="on">
                     <div class="entrada">
+                        <span class="material-symbols-outlined">
+                            person
+                        </span>
                         <input
                         type="text"
                         name="email"
@@ -37,13 +40,14 @@
                         autocomplete="email"
                         required><br>
                         <label for="iemail">
-                            <span class="material-symbols-outlined">
-                                person
-                            </span>
+                            Email
                         </label>
                     </div>
 
                     <div class="entrada">
+                        <span class="material-symbols-outlined">
+                            vpn_key
+                        </span>
                         <input
                         type="password"
                         name="password"
@@ -52,9 +56,7 @@
                         minlength="8"
                         required><br>
                         <label for="isenha">
-                            <span class="material-symbols-outlined">
-                                vpn_key
-                            </span>
+                            Senha
                         </label>
                     </div>
 
